--- a/wanglipeng/常见算法.md
+++ b/wanglipeng/常见算法.md
@@ -1,6 +1,6 @@
 # 机器学习<br/>
-1.利用已知数据来预测未知数据，计算未知数据与已知数据的相似性，赋予未知数据以最相似已知数据的标签；
-2.机器学习方法=模型（待选函数空间）+算法（目标函数、损失函数）+策略（学习策略：梯度下降、牛顿法、EM算法等）
+1.利用已知数据来预测未知数据，计算未知数据与已知数据的相似性，赋予未知数据以最相似已知数据的标签； <br/>
+2.机器学习方法=模型（待选函数空间）+算法（目标函数、损失函数）+策略（学习策略：梯度下降、牛顿法、EM算法等） <br/>
 
 
 
@@ -12,23 +12,23 @@
 
 
 <br/>
---待整理的名词知识有：
+--待整理的名词知识有： <br/>
 模拟退火、遗传算法
 
 ## 接触并学习过的模型有：<br/>
-1.感知机、KNN、决策树、LR（逻辑回归）、朴素贝叶斯、SVM
-2.提升方法（boosting方法）：adaBoost、boosting tree
+1.感知机、KNN、决策树、LR（逻辑回归）、朴素贝叶斯、SVM <br/>
+2.提升方法（boosting方法）：adaBoost、boosting tree <br/>
 
 <br/>
---待整理的模型：
+--待整理的模型：<br/>
 xgboost、fm（ffm）
 
 ## 接触并学习过的策略有：
-1.梯度下降、牛顿法（拟牛顿法）-----》局部最优解（找全局最优解的方法：多试几个初始化参数）
+1.梯度下降、牛顿法（拟牛顿法）-----》局部最优解（找全局最优解的方法：多试几个初始化参数） <br/>
 2.
 
 <br/>
---待整理的策略：
+--待整理的策略： <br/>
 EM算法、
 
 
