--- a/wanglipeng/常见算法.md
+++ b/wanglipeng/常见算法.md
@@ -1,4 +1,4 @@
-#机器学习的理解：<br/>
+# 机器学习的理解：<br/>
 1.利用已知数据来预测未知数据，计算未知数据与已知数据的相似性，赋予未知数据以最相似已知数据的标签；
 2.机器学习方法=模型（待选函数空间）+算法（目标函数、损失函数）+策略（学习策略：梯度下降、牛顿法、EM算法等）
 
@@ -6,16 +6,16 @@
 
 
 
-#深度学习中的神经网络的理解：<br/>
-##接触过的模型有：<br/>
-1.神经网络（前向生成、后向反馈）
+# 深度学习中的神经网络的理解：<br/>
+## 接触过的模型有：<br/>
+1.神经网络（多层前馈神经网络(后向反传播算法)）
 
 
 <br/>
 --待整理的名词知识有：
 模拟退火、遗传算法
 
-#接触并学习过的模型有：<br/>
+# 接触并学习过的模型有：<br/>
 1.感知机、KNN、决策树、LR（逻辑回归）、朴素贝叶斯、SVM
 2.提升方法（boosting方法）：adaBoost、boosting tree
 
@@ -23,7 +23,7 @@
 --待整理的模型：
 xgboost、fm（ffm）
 
-#接触并学习过的策略有：
+# 接触并学习过的策略有：
 1.梯度下降、牛顿法（拟牛顿法）-----》局部最优解（找全局最优解的方法：多试几个初始化参数）
 2.
 
@@ -32,5 +32,5 @@ xgboost、fm（ffm）
 EM算法、
 
 
-#接触过的算法有：
+# 接触过的算法有：
 1.极大似然估计出发的评估算法（损失风险函数、结果风险函数）
